[package]
name = "overloaded_literals"
version = "0.5.0"
edition = "2021"

description = "Overloaded literals"
repository = "https://github.com/CarlKCarlK/anyinput"
readme = "README.md"
documentation = "https://docs.rs/anyinput/latest/anyinput/"
authors = ["Carl Kadie"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = ["macros", "function", "generics", "ndarray", "iterator"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://github.com/CarlKCarlK/anyinput"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# const_format = "0.2.30"
tlist = "0.6.2"
overloaded_literals_macro = { version = "0.5.0", path = "../overloaded_literals_macro" }
# proc-macro2 = "1.0.56"
typenum = "1.16.0"

[dev-dependencies]
const-str = "0.5.4"