[package]
name = "overloaded_literals"
version = "0.5.1"
edition = "2021"

description = "Overloaded Literals to construct your datatypes without boilerplate and with compile-time validation"
repository = "https://github.com/Qqwy/rust-overloaded_literals"
readme = "README.md"
authors = ["Qqwy / Marten"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = ["const", "generic", "literals", "no_std", "overloading"]
categories = ["development-tools", "rust-patterns", "no-std", "no-std::no-alloc", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# const_format = "0.2.30"
tlist = "0.6.2"
overloaded_literals_macro = { version = "0.5.0", path = "../overloaded_literals_macro" }
# proc-macro2 = "1.0.56"
typenum = "1.16.0"

[dev-dependencies]
const-str = "0.5.4"