[package]
name = "overloaded_literals"
version = "0.8.0"
edition = "2021"

description = "Overloaded Literals to construct your datatypes without boilerplate and with compile-time validation"
repository = "https://github.com/Qqwy/rust-overloaded_literals"
readme = "README.md"
authors = ["Qqwy / Marten"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = ["const", "generic", "literals", "no_std", "overloading"]
categories = ["development-tools", "rust-patterns", "no-std", "no-std::no-alloc", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overloaded_literals_macro = { version = "= 0.8.0", path = "../overloaded_literals_macro" }
tlist = "0.7.0"

[dev-dependencies]
const-str = "0.5.4"