[package]
name = "overloaded_literals_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.13", features = ["full", "fold", "extra-traits"] }

[lib]
proc-macro = true
