[package]
name = "overloaded_literals_macro"
version = "0.5.0"
edition = "2021"
description = "Internal macros crate for the overloaded_literals crate."
repository = "https://github.com/Qqwy/rust-overloaded_literals"
readme = "README.md"
authors = ["Qqwy / Marten"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = []
categories = ["development-tools", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.13", features = ["full", "fold", "extra-traits"] }

[lib]
proc-macro = true
